Added Working Text Editor

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="index.css">
   </head>
   <body>
+    <a href="./richtext.html">Other Page</a>
     <div class="main-content">
         <textarea class="text-editor"
         spellcheck="false"
