Added File Downloading

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Advanced Markdown Editor</title>
     <link rel="stylesheet" type="text/css" media="screen" href="index.css">
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <script src="https://unpkg.com/turndown/dist/turndown.js"></script>
   </head>
   <body>
     <div id="editor">
@@ -15,6 +17,6 @@
     </div>
 
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
